--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<a href="#" class="logo-link"><img src="img/header/logo.svg" alt="" class="logo-img"></a>
 	<div class="header-content">
             <div class="header-info">
+            	<a href="#" class="m-logo-link"><img src="img/header/logo.svg" alt="mediaBAZAR" class="m-logo-img"></a>
                 <div class="time info-item">
                     <img class="info-img" src="img/header/clock.svg" alt="">
                     <div class="text-info">
@@ -27,13 +28,24 @@
                     </div>
                 </div>
                 <div class="phone info-item">
-                    <img class="info-img" src="img/header/phone.svg" alt="">
-                    <a href="tel: +7 473 2 205 206" class="text-info">
-                        +7 473 2 205 206
-                        <div class="little">(многоканальный)</div>
+                    <a href="tel:+7 473 2 205 206" class="text-info link-phone">
+                    	<img class="info-img" src="img/header/phone.svg" alt="">
+                        <div class="text-phone">+7 473 2 205 206
+                        <div class="little">(многоканальный)</div></div>
                     </a>
                 </div>
-                <a href="#" class="mail-link"><img class="mail-img" src="img/header/mail.svg" alt=""></a>
+                <a href="mailto:mail@gmail.com" class="mail-link"><img class="mail-img" src="img/header/mail.svg" alt=""></a>
+                <!--burger-->
+                <div class="burger-btn burgerBtn"></div>
+                <div class="burger-menu">
+                	<div class="close"></div>
+                	<img class="burger-logo" src="img/header/burger/logo.svg" alt="mediaBAZAR">
+                	<ul class="burger-list">
+                		<li class="burger-item"><a class="burger-link" href="#">ГЛАВНАЯ</a></li>
+                		<li class="burger-item"><a class="burger-link" href="#">О КОМПАНИИ</a></li>
+                		<li class="burger-item"><a class="burger-link" href="#">КОНТАКТЫ</a></li>
+                	</ul>
+                </div>
             </div>
             <div class="header-menu">
                 <span class="menu-size">
@@ -62,7 +74,7 @@
 <div class="ad">
 	<div class="title">Размещение ТВ рекламы на доске объявлений 1000 мелочей</div>
 	<div class="ad-line">
-		<object id="graph" name="graph" type="image/svg+xml" data="img/ad/line.svg"></object>
+		<img class="line-img" src="img/ad/line.svg" alt="">
 	</div>
 	<div class="ad-list list">
 		<div class="ad-item item">
@@ -98,7 +110,7 @@
 <div class="place">
 	<div class="title">Размещение рекламы на ТВ</div>
 	<div class="place-line">
-		<object id="graph" name="graph" type="image/svg+xml" data="img/place/line.svg"></object>
+		<img class="line-img" src="img/place/line.svg" alt="">
 	</div>
 	<div class="place-list list">
 		<div class="place-item item">
@@ -135,7 +147,7 @@
 <div class="company">
 	<div class="title">Проведение рекламных кампаний</div>
 	<div class="company-line">
-		<object id="graph" name="graph" type="image/svg+xml" data="img/company/line.svg"></object>
+		<img class="line-img" src="img/company/line.svg" alt="">
 	</div>
 	<div class="company-list list">
 		<div class="company-item item">
@@ -179,13 +191,16 @@
 		<div class="footer-info">
 			<span class="name-text">©Медиа Базар</span>
 				<div class="footer-address">
-					<img src="img/footer/addresss.svg" alt="Address">
+					<img class="info-img" src="img/footer/addresss.svg" alt="Address">
 					<div class="address-text">г. Воронеж,<br>ул. Донбасская, 9 «А»</div>
 				</div>
 				<div class="footer-phone">
-					<img src="img/footer/phone.svg" alt="Phone">
-					<div href="tel: +7 473 2 205 206" class="phone-text">
-						<a href="tel: +7 473 2 205 206">+7 473 2 205 206<br><div class="little">(многоканальный)</div></a>
+					<div href="tel:+7 473 2 205 206" class="phone-text">
+                   <a href="tel:+7 473 2 205 206" class="text-info link-phone">
+                    	<img class="info-img" src="img/header/phone.svg" alt="">
+                        <div class="text-phone-footer">+7 473 2 205 206
+                        <div class="little">(многоканальный)</div></div>
+                    </a>
 					</div>
 				</div>
 		</div>
@@ -202,10 +217,12 @@
 			<ul class="more-list">
 				<li class="more-item"><a href="#" class="more-link">Размещение рекламы на ТВ</a></li>
 				<li class="more-item"><a href="#" class="more-link">Проведение рекламных кампаний</a></li>
-				<li class="more-item"><a href="#" class="more-link">Размещение ТВ рекламы на доске объявлений 1000 мелочей</a></li>
+				<li class="more-item"><a href="#" class="more-link">Размещение ТВ рекламы на доске объявлений<br>1000 мелочей</a></li>
 			</ul>
 		</div>
-		<div class="btn-up"></div>
+		<div class="btn">
+			<div class="btn-up"></div>
+		</div>
 	</div>
 	<div class="copyright">
 		<div class="copyright-inner">
@@ -218,6 +235,6 @@
 	</div>
 </div>
 
+<script src="js/main.js"></script>
 </body>
-
 </html>
