--- a/sps.html
+++ b/sps.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css ">
     <title>mediabazar</title>
 </head>
@@ -70,7 +71,7 @@
 		<div class="sps--intro-info">
 			<div class="sps--intro-contacts">
 				<a href="tel:+7 473 2 205 206" class="sps--intro-number">
-					+7 473 2 205 206<br><span>(многоканальный)</span>
+					<span>+7 473 2 205 206</span><br><span>(многоканальный)</span>
 				</a>
 				<div class="sps--contacts-info">
 					<div class="contacts-info-price">От 3 000 руб.</div>
@@ -79,7 +80,7 @@
 			</div>
 			<div class="sps--intro-tv">
 				<img src="img/page-sps/intro/tv.svg" alt="TV">
-				<div class="intro-tv-subtitle">Возможность быстро и бюджетно разместить рекламное объявление в программе 1000 мелочей</div>
+				<h2 class="intro-tv-subtitle">Возможность быстро и бюджетно разместить рекламное объявление в программе 1000 мелочей</h2>
 			</div>
 		</div>
 		<div class="sps--intro-steps">
@@ -107,7 +108,7 @@
 <!-------------info------------->
 <div class="sps--info">
 	<div class="sps--info-inner">
-		<div class="info-inner-subtitle">Подзаголовок 2</div>
+		<h3 class="info-inner-subtitle">Подзаголовок 2</h3>
 		<div class="info-line">
 			<img src="img/page-sps/news/line.svg" alt="" class="subtitle-line">
 		</div>
