--- a/price.html
+++ b/price.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="phone info-item">
-                    <a href="tel:+7 473 2 205 206" class="text-info link-phone">
+                    <a href="tel:+74732205206" class="text-info link-phone">
                     	<img class="info-img" src="img/header/phone.svg" alt="">
                         <div class="text-phone">+7 473 2 205 206
                         <div class="little">(многоканальный)</div></div>
@@ -51,7 +51,7 @@
             <div class="header-menu">
                 <span class="menu-size">
 					<b>Рекламное Агенство Media Bazar</b>
-					<p>Работаем по всей России</p>
+					<i>Работаем по всей России</i>
 				</span>
                 <nav class="menu">
                 	<ul class="menu-list">
@@ -106,8 +106,8 @@
 					<div class="address-text">г. Воронеж,<br>ул. Донбасская, 9 «А»</div>
 				</div>
 				<div class="footer-phone">
-					<div href="tel:+7 473 2 205 206" class="phone-text">
-                   <a href="tel:+7 473 2 205 206" class="text-info link-phone">
+					<div class="phone-text">
+                   <a href="tel:+74732205206" class="text-info link-phone">
                     	<img class="info-img" src="img/header/phone.svg" alt="">
                         <div class="text-phone-footer">+7 473 2 205 206
                         <div class="little">(многоканальный)</div></div>
