--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css ">
     <title>mediabazar</title>
+    <script type='application/ld+json'> 
+	{
+	  "@context": "http://www.schema.org",
+	  "@type": "Рекламное агенство",
+	  "name": "mediabazar",
+	  "url": "http://mediabazartest.byethost7.com/index.html",
+	  "logo": "http://mediabazartest.byethost7.com/img/header/logo.svg",
+	  "description": "Проведение рекламных кампаний и размещение рекламы на ТВ",
+	  "address": {
+	    "@type": "PostalAddress",
+	    "streetAddress": "ул. Донбасская, 9 «А»",
+	    "addressLocality": "Воронеж"
+	  },
+	  "openingHours": "Mo, Tu, We, Th, Fr 09:00-18:00",
+	  "contactPoint": {
+	    "@type": "ContactPoint",
+	    "telephone": "+7 473 2 205 206",
+	    "contactType": "многоканальный"
+	  }
+	}
+ 	</script>
 </head>
 
 <body>
